ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx
      containers:
      - name: ingress-nginx
        image: registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:v1.10.0
        args:
        - /nginx-ingress-controller
        - --ingress-class=nginx
        - --publish-status-address=localhost
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_BIND_SERVICE"]
        ports:
        - containerPort: 80
          hostPort: 80
